--- a/xFunc/Views/VariableView.xaml
+++ b/xFunc/Views/VariableView.xaml
@@ -17,13 +17,9 @@ limitations under the License. -->
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:xFunc.Views"
         xmlns:res="clr-namespace:xFunc.Resources"
-        xmlns:conv="clr-namespace:xFunc.Converters"
         xmlns:exps="clr-namespace:xFunc.Maths.Expressions.Collections;assembly=xFunc.Maths"
         Title="{x:Static res:Resource.VariablesTitle}" Width="220" Height="280"
         ShowInTaskbar="False">
-    <Window.Resources>
-        <conv:MathParameterTypeToStringConverter x:Key="typeToStr" />
-    </Window.Resources>
     <Window.CommandBindings>
         <CommandBinding Command="views:VariableView.AddCommand" Executed="AddCommand_Executed" />
         <CommandBinding Command="views:VariableView.EditCommand" Executed="EditCommand_Executed" CanExecute="EditCommand_CanExecute" />
@@ -63,7 +59,7 @@ limitations under the License. -->
                                     <ControlTemplate TargetType="{x:Type GroupItem}">
                                         <Expander IsExpanded="True">
                                             <Expander.Header>
-                                                <TextBlock Foreground="#FF27276C" FontWeight="Medium" Text="{Binding Path=Name, Converter={StaticResource typeToStr}}" />
+                                                <TextBlock Foreground="#FF27276C" FontWeight="Medium" Text="{Binding Path=Name}" />
                                             </Expander.Header>
                                             <Expander.Content>
                                                 <ItemsPresenter />
