--- a/xFunc/Views/MathControl.xaml
+++ b/xFunc/Views/MathControl.xaml
@@ -73,7 +73,9 @@ limitations under the License. -->
                                 <TextBlock Text="{Binding Path=Answer}" FontSize="16" Margin="20,2,0,0" />
                             </StackPanel>
                             <Button Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{StaticResource buttonStyle}" BorderThickness="0" Tag="{Binding}" Click="removeMath_Click">
-                                <Rectangle Fill="{StaticResource remove}" Width="10" Height="10" />
+                                <Viewbox>
+                                    <TextBlock>×</TextBlock>
+                                </Viewbox>
                             </Button>
                         </Grid>
                     </Border>
