--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -771,6 +771,7 @@ limitations under the License. -->
                     <Grid Margin="0,4,0,2" TextBlock.FontSize="18">
                         <Grid.RowDefinitions>
                             <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -801,6 +802,22 @@ limitations under the License. -->
                             </Viewbox>
                             <Button.ToolTip>
                                 <ToolTip Content="{x:Static res:Resource.AvgToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="0" Tag="sum" Click="InsertDoubleArgFunc_Click">
+                            <Viewbox>
+                                <TextBlock>∑</TextBlock>
+                            </Viewbox>
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.SumToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="1" Tag="product" Click="InsertDoubleArgFunc_Click">
+                            <Viewbox>
+                                <TextBlock>∏</TextBlock>
+                            </Viewbox>
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.ProductToolTip}" />
                             </Button.ToolTip>
                         </Button>
                     </Grid>
@@ -1170,22 +1187,6 @@ limitations under the License. -->
                             </Viewbox>
                             <Button.ToolTip>
                                 <ToolTip Content="{x:Static res:Resource.LCMToolTip}" />
-                            </Button.ToolTip>
-                        </Button>
-                        <Button Grid.Row="1" Grid.Column="2" Tag="sum" Click="InsertDoubleArgFunc_Click">
-                            <Viewbox>
-                                <TextBlock>∑</TextBlock>
-                            </Viewbox>
-                            <Button.ToolTip>
-                                <ToolTip Content="{x:Static res:Resource.SumToolTip}" />
-                            </Button.ToolTip>
-                        </Button>
-                        <Button Grid.Row="1" Grid.Column="3" Tag="product" Click="InsertDoubleArgFunc_Click">
-                            <Viewbox>
-                                <TextBlock>∏</TextBlock>
-                            </Viewbox>
-                            <Button.ToolTip>
-                                <ToolTip Content="{x:Static res:Resource.ProductToolTip}" />
                             </Button.ToolTip>
                         </Button>
                     </Grid>
