--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -804,6 +804,14 @@ limitations under the License. -->
                                 <ToolTip Content="{x:Static res:Resource.AvgToolTip}" />
                             </Button.ToolTip>
                         </Button>
+                        <Button Grid.Row="0" Grid.Column="3" Tag="count" Click="InsertDoubleArgFunc_Click">
+                            <Viewbox>
+                                <TextBlock>count(x)</TextBlock>
+                            </Viewbox>
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.CountToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
                         <Button Grid.Row="1" Grid.Column="0" Tag="sum" Click="InsertDoubleArgFunc_Click">
                             <Viewbox>
                                 <TextBlock>∑</TextBlock>
