--- a/xFunc/Views/AboutView.xaml
+++ b/xFunc/Views/AboutView.xaml
@@ -32,14 +32,14 @@ limitations under the License. -->
         </TextBlock>
         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,100,0,0">
             <Run Text="{x:Static res:Resource.HomePageTextBox}" />
-            <Hyperlink x:Name="link" NavigateUri="http://xfunc.codeplex.com/">http://xfunc.codeplex.com/</Hyperlink>
+            <Hyperlink x:Name="link" NavigateUri="https://github.com/sys27/xFunc">https://github.com/sys27/xFunc</Hyperlink>
         </TextBlock>
         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,120,0,0">
             <Run Text="{x:Static res:Resource.DocumentationTextBox}" />
             <Hyperlink NavigateUri="https://github.com/sys27/xFunc/wiki" RequestNavigate="DocsHyperlink_RequestNavigate">https://github.com/sys27/xFunc/wiki</Hyperlink>
         </TextBlock>
         <GroupBox Margin="10,0,10,34" Header="Apache License 2.0" Height="194" VerticalAlignment="Bottom">
-            <TextBox x:Name="license" xml:space="preserve" Margin="4" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">Copyright 2012-2017 Dmitry Kischenko
+            <TextBox x:Name="license" xml:space="preserve" Margin="4" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">Copyright 2012-2019 Dmitry Kischenko
 
 Licensed under the Apache License, Version 2.0 (the "License"); 
 you may not use this file except in compliance with the License.
