--- a/xFunc/Views/AboutView.xaml
+++ b/xFunc/Views/AboutView.xaml
@@ -1,17 +1,10 @@
-﻿<!-- Copyright 2012-2020 Dmytro Kyshchenko
+﻿<!-- 
 
-Licensed under the Apache License, Version 2.0 (the "License"); 
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
+Copyright (c) Dmytro Kyshchenko. All rights reserved.
+Licensed under the MIT license. See LICENSE file in the project root for full license information.
 
-    http://www.apache.org/licenses/LICENSE-2.0
+-->
 
-Unless required by applicable law or agreed to in writing, software 
-distributed under the License is distributed on an "AS IS" BASIS, 
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
-express or implied. 
-See the License for the specific language governing permissions and 
-limitations under the License. -->
 <Window x:Class="xFunc.Views.AboutView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -38,21 +31,15 @@ limitations under the License. -->
             <Run Text="{x:Static res:Resource.DocumentationTextBox}" />
             <Hyperlink NavigateUri="https://github.com/sys27/xFunc/wiki" RequestNavigate="DocsHyperlink_RequestNavigate">https://github.com/sys27/xFunc/wiki</Hyperlink>
         </TextBlock>
-        <GroupBox Margin="10,0,10,34" Header="Apache License 2.0" Height="194" VerticalAlignment="Bottom">
-            <TextBox x:Name="license" xml:space="preserve" Margin="4" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">Copyright 2012-2020 Dmytro Kyshchenko
+        <GroupBox Margin="10,0,10,34" Header="MIT License" Height="194" VerticalAlignment="Bottom">
+            <TextBox x:Name="license" xml:space="preserve" Margin="4" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">The MIT License (MIT)
+Copyright © 2012-2021 Dmytro Kyshchenko
 
-Licensed under the Apache License, Version 2.0 (the "License"); 
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
-    http://www.apache.org/licenses/LICENSE-2.0
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
-Unless required by applicable law or agreed to in writing, software 
-distributed under the License is distributed on an "AS IS" BASIS, 
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
-express or implied. 
-See the License for the specific language governing permissions and 
-limitations under the License.</TextBox>
+THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</TextBox>
         </GroupBox>
 
         <Button Content="OK" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,10,10" IsDefault="True" IsCancel="True" />
